--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 
 /*Home----------------------------------------*/
 
-:root{
+:root {
     --bg-color-cinza: #D9D9D9;
     --font-montserrat: 'Montserrat', sans-serif;
 }
 
-#micro_cabecalho{
+#micro_cabecalho {
     height: 40px;
     background-color: var(--bg-color-cinza);
     display: flex;
@@ -19,19 +19,50 @@
     font-size: 14px;
 }
 
-.alin_micro_cabecalho{
+.alin_micro_cabecalho {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 20px;
 }
 
-.alin_micro_cabecalho div{
+.alin_micro_cabecalho div {
     display: flex;
     flex-direction: row;
     gap: 5px;
 }
 
-
-
 /*Home----------------------------------------*/
+
+/*Contatos----------------------------------------*/
+.contatos_content {
+    background-image: url(img/crop2\ 1.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.texto h2 {
+    font-size: 4rem;
+    color: #FFFFFF;
+    font-family: var(--font-montserrat);
+}
+
+.texto span {
+    color: #101010;
+    font-family: var(--font-montserrat);
+}
+
+.texto p {
+    font-size: 2rem;
+    color: #FFFFFF;
+    font-family: var(--font-montserrat);
+}
+
+
+
+/*Contatos----------------------------------------*/
