--- a/style.css
+++ b/style.css
@@ -29,3 +29,53 @@
     font-size: 20px;
     text-align: center;
 }
+.container{
+    background-color: var(--bg-color-cinza);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color:#FFFFFF;
+    padding: 5%;
+    gap: 20px;
+}
+.item{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    height: 330px;
+    width: 345px;
+    filter: drop-shadow(0px 6px 10px var(--bg-color-cinza));
+}
+.item p{
+    position: absolute;
+    left: 7.54%;
+    right: 6.96%;
+    top: 57.88%;
+    bottom: 20.3%;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+}
+.item span{
+    text-align: center;
+    position: absolute;
+    left: 43.48%;
+    right: 42.9%;
+    top: 42.73%;
+    bottom: 50%;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+}
+.item img{
+    position: absolute;
+    left: 43.48%;
+    top: 21.21%;
+    bottom: 65.15%;
+}
+/*Ingressos-----------------------------------*/
