--- a/style.css
+++ b/style.css
@@ -269,10 +269,11 @@
 }
 
 .texto-diferencial h2 {
-    font-size: 4rem;
+    font-size: 50px;
     margin-bottom: 2rem;
     font-weight: bolder;
     text-align: left;
+    padding-right: 5rem;
 }
 
 .texto-diferencial h2 span {
@@ -280,12 +281,12 @@
 }
 
 .texto-diferencial p {
-    font-size: 2rem;
+    font-size: 25px;
 }
 
 .card-area {
     width: 40%;
-    height: 80%;
+    height: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -310,7 +311,7 @@
     height: 225px;
     background-color: #FFFFFF;
     border-radius: 10px;
-    padding: 2rem;
+    padding: 1rem;
     filter: drop-shadow(0px 6px 10px #19872C);
 }
 
@@ -405,13 +406,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5%;
+    gap: 15%;
 }
 
 .texto h2 {
-    font-size: 4rem;
+    font-size: 40px;
     color: #FFFFFF;
     font-family: var(--font-montserrat);
+    font-weight: bolder;
 }
 
 .texto span {
@@ -420,7 +422,7 @@
 }
 
 .texto p {
-    font-size: 2rem;
+    font-size: 24px;
     color: #FFFFFF;
     font-family: var(--font-montserrat);
 }
@@ -432,16 +434,16 @@
     align-items: center;
     border-radius: 10px;
     width: 30%;
-    height: 80vh;
-    padding: 3rem;
+    height: 70vh;
+    padding: 4rem;
     font-family: var(--font-montserrat);
 }
 
 #form-contatos h2 {
-    font-size: 3rem;
+    font-size: 30px;
     font-weight: bolder;
     width: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 #form-contatos h2 span {
@@ -451,25 +453,25 @@
 }
 
 #form-contatos p {
-    font-size: 1.8rem;
+    font-size: 20px;
     text-align: left;
     width: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .inputs {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 50%;
     width: 100%;
 }
 
 #nome {
     font-family: var(--font-montserrat);
-    font-size: 1.8rem;
-    height: 60px;
+    font-size: 20px;
+    height: 20%;
     width: 96%;
     border: 2px solid #19872C;
     border-radius: 10px;
@@ -478,8 +480,8 @@
 
 #email {
     font-family: var(--font-montserrat);
-    font-size: 1.8rem;
-    height: 60px;
+    font-size: 20px;
+    height: 20%;
     width: 96%;
     border: 2px solid #19872C;
     border-radius: 10px;
@@ -488,7 +490,8 @@
 
 #mensagem {
     font-family: var(--font-montserrat);
-    font-size: 1.8rem;
+    font-size: 20px;
+    height: 35%;
     width: 96%;
     border: 2px solid #19872C;
     border-radius: 10px;
@@ -500,14 +503,14 @@
 #enviar-btn {
     border: none;
     outline: none;
-    margin-top: 2rem;
+    margin-top: 3rem;
     background-color: #19872C;
     color: #FFFFFF;
     cursor: pointer;
     font-family: var(--font-montserrat);
-    font-size: 1.8rem;
+    font-size: 20px;
     border-radius: 10px;
-    height: 60px;
+    height: 10%;
     width: 100%;
 }
 
